# AutoNetAdmin

./: .env  .env.example  .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: database.py  security.py  settings.py
backend/app/models/: __init__.py  device_model.py  user_model.py
backend/migrations/: env.py
backend/migrations/versions/: 4be3dadf168c_init.py
backend/tests/: conftest.py
backend/tests/core/: test_security.py
